using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class NameKeys : MonoBehaviour
{
    public static readonly string warmTag = "Warm";
    public static readonly string coolTag = "Cool";
    public static readonly string House_FrontTag = "House_Front";
    public static readonly string House_BackTag = "House_Back";

    public static readonly string anim_isPlayerWarm = "isPlayerWarm";
    public static readonly string anim_GameOverTrigger = "GameOver";
    public static readonly string anim_isStressed = "isStressed";

    public static readonly string anim_beWarmTrigger = "beWarm";
    public static readonly string anim_beColdTrigger = "beCold";

    public static readonly string mainScene = "Main";
    public static readonly string tutorialScene = "Tutorial";
    public static readonly string creditScene = "Credit";

    public static readonly string loadSceneCanvas = "LoadSceneCanvas";
}
